# climate-conversations

./: .gitignore  .gitmodules  CODEOWNERS  Makefile  README.md  eda.ipynb  pyproject.toml  requirements.txt
external_code/SAPGraph/: README.md  Tester.py
external_code/SAPGraph/module/: Encoder.py  PositionEmbedding.py  SAPGAT.py  SAPGATLayer.py  SAPGATMultiLayer.py  dataloader_all.py  dataloader_item.py  embedding.py  vocabulary.py
external_code/SAPGraph/script/: calEdge.py  createVoc.py  lowTFIDFWords.py
external_code/SAPGraph/tools/: logger.py  utils.py
project/analysis/: classify_runner.sh  classify_runner_colab.ipynb  expanded_moral_foundations_dictionary.json  moral foundations dictionary.dic  moral_found_dict_generator.py  moral_foundation_analysis.ipynb  moral_strength_classifier.py  reddit_analysis.ipynb  test.ipynb
project/analysis/gensim-data/: information.json
project/cleaning/: proquest_clean.py  reddit_clean.py  service.py
project/data/raw/: WoS_results.xls  environ_test_dataset.tar
project/data_collection/: collect.py  moral_foundation_data.py  proquest_article_download.ipynb  proquest_scraper.ipynb  reddit_eda.ipynb
project/journal_summarization/: Colab_Journal_Summarization.ipynb  LSTM_summarizer.py  SAPGraph_summarizer.py  abstract_summarization.py  article_summarization.py  journal_preprocess_abstractive_summary.py  requirements.txt
project/profile_generation/: profile_generator.py
project/topic_modeling/: lda.ipynb  lda_and_bertopic.py  topmod_weights2df.py
project/utils/: constants.py  functions.py
project/utils/classes/: tokenizer.py
project/visualization/: dashboard.py  moral-foundation-dashboard.py  moral_foundation_dashboard.py
