[tool.poetry]
name = "climate-conversations"
version = "0.1.0"
description = "This project uses NLP to summarize climate science articles and online climate conversations from Reddit. "
authors = ["ehabich", "chanteriam", "klinkoberstar", "jkyeaton"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
requests = "^2.28.2"
pytest = "^7.3.1"
responses = "^0.23.1"
pre-commit = "^3.4.0"
spacy-transformers = "^1.3.4"
tools = "^0.1.9"
dgl = "^2.0.0"
rouge = "^1.0.1"
spacy = "^3.7.4"
sentence-transformers = "^2.5.1"
tensorflow = "^2.15.0.post1"
word2vec = "^0.11.1"
gensim = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
