[tool.poetry]
name = "climate-conversations"
version = "0.1.0"
description = "This project uses NLP to summarize climate science articles and online climate conversations from Reddit. "
authors = ["ehabich", "chanteriam", "klinkoberstar", "jkyeaton"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
requests = "^2.28.2"
pytest = "^7.3.1"
responses = "^0.23.1"
pre-commit = "^3.4.0"
spacy-transformers = "^1.3.4"
tools = "^0.1.9"
dgl = "^2.0.0"
rouge = "^1.0.1"
spacy = "^3.7.4"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"}
moralstrength = "^0.2.13"
torch = "^2.2.0"
torchvision = "^0.17.0"
pytorch-lightning = "^2.2.0.post0"
transformers = "^4.38.1"
bert-score = "^0.3.13"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
dash = "^2.16.0"
plotly = "^5.19.0"
wordcloud = "^1.9.3"
flask-cache = "^0.13.1"
flask-caching = "^2.1.0"
sentence-transformers = "^2.5.1"
tensorflow = "^2.15.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
